# Distributed-Wallet-Ledger-Platform

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 03aeff243be4_create_users_table.py  a7b8c9d0e1f2_add_idempotency_key_to_transactions.py  ace04db20b32_create_wallets_table.py  b8c9d0e1f2a3_create_outbox_events_table.py  bb91eeb72b09_init.py  c3f9a1d72b40_create_transactions_and_ledger_entries.py  d0e1f2a3b4c5_create_analytics_and_processed_events.py  e1f2a3b4c5d6_add_seq_to_ledger_entries.py
app/: main.py
app/api/: deps.py  middleware.py
app/cache/: deps.py  redis_cache.py
app/core/: config.py  logging.py  metrics.py  security.py
app/db/: base.py  session.py
app/events/: consumer.py  producer.py  publisher.py  run_analytics_consumer.py  run_consumer.py  run_publisher.py
app/jobs/: run_analytics_snapshot.py  run_reconciliation.py
app/repositories/: ledger_repo.py  outbox_repo.py  processed_event_repo.py  (+4 more)
dags/: analytics_snapshot_dag.py  reconciliation_dag.py
k8s/: README.md  api.yaml  config.yaml  cronjobs.yaml  migrate-job.yaml  postgres.yaml  redis.yaml  redpanda.yaml  workers.yaml
tests/: conftest.py  test_analytics.py  test_auth_api.py  test_cache.py  test_concurrency.py  test_consumer.py  test_dags.py  test_deposit_api.py  test_health.py  test_history.py  test_observability.py  test_outbox.py  test_publisher.py  test_reconciliation.py  test_transfer_api.py  test_user_repository.py  test_users_api.py  test_wallets_api.py  test_withdrawal_api.py
(+24 files in other folders)
