[project]
name = "wallet-ledger-platform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.4",
    "confluent-kafka>=2.5.0",
    "email-validator>=2.3.0",
    "fastapi>=0.136.3",
    "psycopg[binary]>=3.3.4",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.14.1",
    "pyjwt>=2.13.0",
    "python-multipart>=0.0.29",
    "redis>=5.0",
    "sqlalchemy>=2.0",
    "uvicorn[standard]>=0.48.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "testcontainers[redpanda]>=4.0",
]


[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
markers = [
    "integration: requires Docker (spins up Redpanda via testcontainers)",
]
